--- a/src/apps/auth/pyproject.toml
+++ b/src/apps/auth/pyproject.toml
@@ -15,6 +15,7 @@ pyjwt = { extras = ["crypto"], version = "^2.9.0" }
 pydantic-settings = "^2.4.0"
 psycopg2-binary = "^2.9.9"
 bcrypt = "^4.2.0"
+cryptography = "^43.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
